--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-plugin-transform-flow-strip-types": "^6.14.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-plugin-transform-regenerator": "^6.16.1",
-    "babel-preset-latest": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "fast-async": "github:simondegraeve/fast-async#refactoring"
   },
