--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "babel-plugin-transform-regenerator": "^6.16.1",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
-    "fast-async": "github:matatbread/fast-async#2d60c327e7a72bff8b726ba7f53d1d35821fb0c3"
+    "fast-async": "github:matatbread/fast-async#2d60c327e7a72bff8b726ba7f53d1d35821fb0c3",
+    "nodent": "^3.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
