--- a/package.json
+++ b/package.json
@@ -3,18 +3,10 @@
   "version": "5.2.1",
   "description": "An opinionated `babel` preset",
   "license": "MIT",
-  "author": {
-    "name": "Simon Degrave",
-    "email": "simon.degraeve@gmail.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/simondegraeve/babel-preset-saya.git"
-  },
+  "author": "Simon Degrave <simon.degraeve@gmail.com>",
+  "repository": "github:SimonDegraeve/babel-preset-saya",
   "homepage": "https://github.com/SimonDegraeve/babel-preset-saya#readme",
-  "bugs": {
-    "url": "https://github.com/SimonDegraeve/babel-preset-saya/issues"
-  },
+  "bugs": "https://github.com/SimonDegraeve/babel-preset-saya/issues",
   "main": "index.js",
   "files": [
     "lib",
@@ -62,7 +54,5 @@
   },
   "jest": {
     "preset": "jest-preset-saya"
-  },
-  "readme": "ERROR: No README data found!",
-  "_id": "babel-preset-saya@5.2.0"
+  }
 }
